--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Dodeca Look">
-        <!ENTITY version_name "1.1">
+        <!ENTITY version_name "1.2">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -68,4 +68,5 @@
     <string name="outline_button_title">Показывать абрис</string>
     <string name="autocenter_button_title">Автоцентровка</string>
     <string name="autosave_title">Автосохранение</string>
+    <string name="ddu_preview_title">Предпросмотр файла ddu</string>
 </resources>
