--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Dodeca Look">
-        <!ENTITY version_name "1.1">
+        <!ENTITY version_name "1.2">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -87,5 +87,7 @@
 
     <!-- Help -->
     <string name="help_title">Help</string>
+
+    <string name="ddu_preview_title">ddu preview</string>
 
 </resources>
