--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -83,7 +83,7 @@
     <string name="ddu_delete">Удалить</string>
     <string name="ddu_restore">Восстановить</string>
     <string name="rename_dialog_message">Переименовать \"%s\"%s</string>
-    <string name="rename_dialog_original_name">исходное имя: \"%s\"</string>
+    <string name="rename_dialog_original_name">(исходное имя: \"%s\")</string>
     <string name="ddu_delete_toast">\"%s\" удалён</string>
     <string name="ddu_restore_toast">\"%s\" восстановлен в \"%s\"</string>
 </resources>
