--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="settings_about_title">About</string>
     <string name="description_summary">Android port for &app_name;</string>
     <string name="version_title">Version</string>
-    <string name="version_summary" translatable="false">&app_name; &version_name;</string>
+    <string name="version_summary">&app_name; &version_name;</string>
     <string name="copyright_title" translatable="false">Copyright</string>
     <string name="copyright_summary">© Revolt Pimenov (algorithms, esthetic geometry), Ivan Nikitin (programming)</string>
     <string name="support_title">Feedback and support</string>
