--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Додека Медитация">
-        <!ENTITY version_name "1.3.1">
+        <!ENTITY version_name "1.3.2">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -113,4 +113,6 @@
     <string name="edit_circle_border_color_description">Окружность</string>
     <string name="edit_circle_has_border_color_text">Другой цвет границы</string>
     <string name="choose_color_button_title">Редактор окружностей</string>
+    <string name="circle_visibility_description">Показать/скрыть окружность</string>
+    <string name="circle_show_description">Видимость</string>
 </resources>
