--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Додека Медитация">
-        <!ENTITY version_name "1.3.2">
+        <!ENTITY version_name "1.3.3">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -121,4 +121,13 @@
     <string name="autocenter_preview_summary">Проводить автоцентровку предпросмотров если наилучший центр не сохранён</string>
     <string name="folder_icon_description">Иконка папки</string>
     <string name="dir_name_initial_text">[имя папки]</string>
+    <string name="ddu_duplicate_toast">Копия \"%s\" сохранена как \"%s\"</string>
+    <string name="dir_importing_toast">Импортируется папка \"%s\"...</string>
+    <string name="dir_exporting_toast">Экспортируется папка \"%s\"...</string>
+    <string name="ddu_duplicate">Создать копию</string>
+    <string name="ddu_export">Экспортировать</string>
+    <string name="ddu_export_for_dodecalook">Экспортировать для DodecaLook</string>
+    <string name="import_ddus_title">Импортировать папку</string>
+    <string name="export_ddus_title">Экспортировать всё</string>
+    <string name="to_parent_dir_title">В родительскую папку</string>
 </resources>
