--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -127,7 +127,13 @@
     <string name="ddu_duplicate">Создать копию</string>
     <string name="ddu_export">Экспортировать</string>
     <string name="ddu_export_for_dodecalook">Экспортировать для DodecaLook</string>
-    <string name="import_ddus_title">Импортировать папку</string>
+    <string name="import_ddus_title">Импортировать ddu-картины</string>
     <string name="export_ddus_title">Экспортировать всё</string>
     <string name="to_parent_dir_title">В родительскую папку</string>
+    <string name="import_folder_title">Импортировать папку с ddu-картинами</string>
+    <string name="delete_ddus">Удалить все ddu-картины</string>
+    <string name="delete_all_alert_message">Вы хотите удалить все ddu-картины?</string>
+    <string name="delete_all_alert_title">Подтверждение удаления</string>
+    <string name="dir_delete">Удалить папку</string>
+    <string name="dir_export">Экспортировать папку</string>
 </resources>
