--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Додека Медитация">
-        <!ENTITY version_name "1.3.4">
+        <!ENTITY version_name "1.3.5">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -74,7 +74,6 @@
     <string name="autocenter_button_title">Автоцентровка</string>
     <string name="autosave_title">Автосохранение</string>
     <string name="ddu_preview_title">Предпросмотр ddu-картин</string>
-    <string name="settings_ddu_files_title">ddu-картины</string>
     <string name="settings_preview_title">Предпросмотр</string>
     <string name="discard_previews_title">Сбросить предпросмотры</string>
     <string name="preview_size_title">Размер предпросмотра</string>
@@ -122,8 +121,8 @@
     <string name="folder_icon_description">Иконка папки</string>
     <string name="dir_name_initial_text">[имя папки]</string>
     <string name="ddu_duplicate_toast">Копия \"%s\" сохранена как \"%s\"</string>
-    <string name="dir_importing_toast">Импортируется папка \"%s\"...</string>
-    <string name="dir_exporting_toast">Экспортируется папка \"%s\"...</string>
+    <string name="dir_importing_toast">Импортируется папка \"%s\"…</string>
+    <string name="dir_exporting_toast">Экспортируется папка \"%s\"…</string>
     <string name="ddu_duplicate">Создать копию</string>
     <string name="ddu_export">Экспортировать</string>
     <string name="ddu_export_for_dodecalook">Экспортировать для DodecaLook</string>
@@ -137,4 +136,8 @@
     <string name="dir_delete">Удалить папку</string>
     <string name="dir_export">Экспортировать папку</string>
     <string name="toggle_folders">Показать/скрыть папки</string>
+    <string name="settings_ddu_files_title">Восстановить</string>
+    <string name="settings_evolution_title">Эволюция</string>
+    <string name="skip_n_title">Пропустить n обновлений</string>
+    <string name="skip_n_summary">Пропустить обновления без перерисовки</string>
 </resources>
